// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<GifExpertApp /> tests should show a list of categories 1`] = `
<Fragment>
  <h2>
    GifExpertApp
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <GifGrid
    category="One Punch"
    key="One Punch"
  />
  <GifGrid
    category=" Dragon Ball"
    key=" Dragon Ball"
  />
</Fragment>
`;

exports[`<GifExpertApp /> tests should show correctly the component 1`] = `
<Fragment>
  <h2>
    GifExpertApp
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
</Fragment>
`;
